fixes on overflow project cards and detect scroll direction

--- a/src/components/FadeInSectionWrapper/FadeInSectionWrapper.module.scss
+++ b/src/components/FadeInSectionWrapper/FadeInSectionWrapper.module.scss
@@ -7,13 +7,13 @@
 .fade_left_to_right {
 	opacity: 0;
 	filter: blur(2px);
-	transform: translateX(5%);
+	transform: translateX(1%);
 }
 
 .fade_right_to_left {
 	opacity: 0;
 	filter: blur(2px);
-	transform: translateX(-5%);
+	transform: translateX(-1%);
 }
 
 .fadeInVisible {
